# ChangeLog for genkernel
# Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni
# Distributed under the GPL v2

  28 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> TODO, +modules/README:
  Added the modules directory, which will be used to store the built-in
  modules and also for external entities to add their own modules and hooks.

  28 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> +defaults/busy-config,
  +defaults/config.sh, +defaults/kernel-config, +defaults/modules_load,
  +defaults/nb-busybox.cf:
  Added a defaults directory to store default files for builds. These are
  overridden by architecture or module specific parameters. This should end
  up reducing the amount of architecture-specific files needed, especially
  as most of them have files which are (nearly) identical.

  28 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> -alpha/busy-config,
  -alpha/config.sh, -alpha/kernel-config, -alpha/modules_load,
  +arch/alpha/busy-config, +arch/alpha/config.sh, +arch/alpha/kernel-config,
  +arch/alpha/modules_load, +arch/ia64/busy-config, +arch/ia64/config.sh,
  +arch/ia64/kernel-config, +arch/mips/ip22r4k-2006_1.cf,
  -mips/ip22r4k-2006_1.cf, +arch/ia64/modules_load,
  +arch/mips/ip22r5k-2006_1.cf, +arch/mips/ip27r10k-2006_1.cf,
  +arch/mips/ip28r10k-2006_1.cf, +arch/mips/ip30r10k-2006_1.cf,
  +arch/mips/ip32r5k-2006_1.cf, +arch/mips/ip32rm5k-2006_1.cf,
  -mips/ip22r5k-2006_1.cf, -mips/ip27r10k-2006_1.cf,
  -mips/ip28r10k-2006_1.cf, -mips/ip30r10k-2006_1.cf,
  -mips/ip32r5k-2006_1.cf, -mips/ip32rm5k-2006_1.cf, +arch/mips/busy-config,
  +arch/mips/config.sh, +arch/mips/modules_load, +arch/mips/nb-busybox.cf,
  +arch/parisc/busy-config, +arch/parisc/config.sh,
  +arch/parisc/modules_load, +arch/parisc64/busy-config,
  +arch/parisc64/config.sh, +arch/parisc64/modules_load,
  +arch/ppc/busy-config, +arch/ppc/config.sh, +arch/ppc/kernel-config,
  +arch/ppc/modules_load, +arch/ppc64/busy-config, +arch/ppc64/config.sh,