@@ -2,6 +2,15 @@
 # Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni
 # Distributed under the GPL v2
 
+  28 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> TODO,
+  +defaults/initrd.defaults, +defaults/initrd.scripts,
+  +defaults/keymaps.tar.gz, +defaults/linuxrc, +defaults/modprobe,
+  +defaults/udhcpc.scripts, gen_initramfs.sh, -generic/initrd.defaults,
+  -generic/initrd.scripts, -generic/keymaps.tar.gz, -generic/linuxrc,
+  -generic/modprobe, -generic/udhcpc.scripts:
+  Moving files from generic to defaults, since they are the defaults used
+  globally.
+
   28 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> TODO, +modules/README:
   Added the modules directory, which will be used to store the built-in
   modules and also for external entities to add their own modules and hooks.
